--- a/riceschoots-common/pom.xml
+++ b/riceschoots-common/pom.xml
@@ -14,7 +14,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>riceschoots-common-utils</module>
+        <module>common-utils</module>
     </modules>
 
 
