添加服务提供者

--- a/riceschoots-system/riceschoots-system-provider/src/main/resources/application-dev.yml
+++ b/riceschoots-system/riceschoots-system-provider/src/main/resources/application-dev.yml
@@ -1,2 +1,6 @@
 server:
   port: 8019
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:1111/eureka,http://localhost:1112/eureka
