--- a/riceschoots-system/riceschoots-system-api/pom.xml
+++ b/riceschoots-system/riceschoots-system-api/pom.xml
@@ -14,6 +14,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
