--- a/riceschoots-system/riceschoots-system-provider/pom.xml
+++ b/riceschoots-system/riceschoots-system-provider/pom.xml
@@ -35,7 +35,6 @@
     </profiles>
 
 	<dependencies>
-        <!--springboot 2.0.5.RELEASE start-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -56,7 +55,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <!--springboot 2.0.5.RELEASE end-->
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>cn.riceschoots.growth</groupId>
+			<artifactId>riceschoots-system-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
     </dependencies>
 
 	<build>
