添加服务提供者和服务消费者

--- a/riceschoots-system/richeschoots-system-eureka/pom.xml
+++ b/riceschoots-system/richeschoots-system-eureka/pom.xml
@@ -38,11 +38,11 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <configuration>
+        <!--<configuration>
           <executable>true</executable>
           <mainClass>com.qin.App</mainClass>
           <fork>true</fork>
-        </configuration>
+        </configuration>-->
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
