--- a/riceschoots-web/pom.xml
+++ b/riceschoots-web/pom.xml
@@ -12,10 +12,9 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.5.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+        <groupId>cn.riceschoots.growing</groupId>
+        <artifactId>riceschoots</artifactId>
+        <version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -38,7 +37,6 @@
 
 
     <dependencies>
-        <!--springboot 2.0.5.RELEASE start-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -59,7 +57,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <!--springboot 2.0.5.RELEASE end-->
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.riceschoots.growth</groupId>
+            <artifactId>riceschoots-system-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 	<build>
